--- a/www/index.html
+++ b/www/index.html
@@ -12,15 +12,19 @@
 <body ng-app="app">
     <ion-pane>
         <ion-header-bar class="bar-stable bar-header bar-energized">
+
+
             <h1 class="title ">Listfy</h1>
+
         </ion-header-bar>
         <ion-content>
 
         </ion-content>
     </ion-pane>
 
-
     <script src="assets/lib/ionic/js/ionic.bundle.js"></script>
+    <script src="assets/lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="assets/lib/ionic-service-core/ionic-core.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
