--- a/www/index.html
+++ b/www/index.html
@@ -7,25 +7,28 @@
 
     <link href="assets/lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
-
 </head>
 <body ng-app="app">
-    <ion-pane>
-        <ion-header-bar class="bar-stable bar-header bar-energized">
-            <h1 class="title ">Listfy</h1>
-        </ion-header-bar>
-        <ion-content>
-            <div ui-view></div>
-        </ion-content>
-    </ion-pane>
+<ion-pane>se
+    <ion-header-bar class="bar-stable bar-header bar-energized">
+        <h1 class="title ">Listfy</h1>
+    </ion-header-bar>
 
-    <script src="assets/lib/ionic/js/ionic.bundle.js"></script>
-    <script src="assets/lib/ngCordova/dist/ng-cordova.js"></script>
-    <script src="assets/lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <ion-content>
+        <div ui-view></div>
+    </ion-content>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-    <script src="app/app.js"></script>
-    <script src="app/components/home/homeController.js"></script>
+    <ion-footer-bar ui-view="footer" align-title="center"> </ion-footer-bar>
+
+</ion-pane>
+
+<script src="assets/lib/ionic/js/ionic.bundle.js"></script>
+<script src="assets/lib/ngCordova/dist/ng-cordova.js"></script>
+<script src="assets/lib/angular-ui-router/release/angular-ui-router.js"></script>
+
+<!-- cordova script (this will be a 404 during development) -->
+<script src="cordova.js"></script>
+<script src="app/app.js"></script>
+<script src="app/components/home/homeController.js"></script>
 </body>
 </html>
