Layout to add product into list ref #1

--- a/www/index.html
+++ b/www/index.html
@@ -30,5 +30,6 @@
 <script src="cordova.js"></script>
 <script src="app/app.js"></script>
 <script src="app/components/home/homeController.js"></script>
+<script src="app/shared/productsService.js"></script>
 </body>
 </html>
