--- a/www/index.html
+++ b/www/index.html
@@ -18,11 +18,13 @@
     <script src="assets/lib/ionic/js/ionic.bundle.js"></script>
     <script src="assets/lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="assets/lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="assets/lib/ng-lodash/build/ng-lodash.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <script src="app/app.js"></script>
     <script src="app/components/home/homeController.js"></script>
+    <script src="app/shared/product.js"></script>
     <script src="app/shared/productsService.js"></script>
 </body>
 </html>
